buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'java'
    id 'application'
}

// the following 3 blocks allow other modules to depend on test artifacts in this module via:
//     testImplementation project(path: ':common', configuration: 'testArtifacts')
configurations {
    testArtifacts.extendsFrom testRuntime
}

task testJar(type: Jar) {
    from sourceSets.test.output
    archiveClassifier.set('test')
}

artifacts {
    testArtifacts testJar
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
    maven { url 'https://packages.confluent.io/maven/' }
}


dependencies {
    implementation 'org.slf4j:slf4j-simple:2.0.18'
    implementation('org.apache.kafka:kafka-clients') {
        version {
            strictly '4.3.1'
        }
    }
    implementation 'io.confluent:kafka-streams-avro-serde:8.3.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:6.1.1'
    testImplementation 'org.hamcrest:hamcrest:3.0'
    testImplementation 'org.testcontainers:testcontainers:2.0.5'
    testImplementation 'org.testcontainers:kafka:1.21.4'
    testImplementation 'commons-codec:commons-codec:1.22.0'
    testImplementation 'commons-io:commons-io:2.22.0'
    testImplementation 'org.apache.flink:flink-sql-connector-kafka:5.0.0-2.2'
    testImplementation 'org.apache.flink:flink-connector-base:2.3.0'
    testImplementation 'org.apache.flink:flink-sql-avro-confluent-registry:2.3.0'
    testImplementation 'org.apache.flink:flink-test-utils:2.3.0'
    testImplementation 'org.apache.flink:flink-table-api-java-bridge:2.3.0'
    testImplementation 'org.apache.flink:flink-table-planner_2.12:2.3.0'
    testImplementation 'org.apache.flink:flink-table-planner_2.12:2.3.0:tests'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:6.1.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:6.1.1'
}

test {
    useJUnitPlatform()
    testLogging {
        outputs.upToDateWhen { false }
        showStandardStreams = true
        events 'PASSED', 'SKIPPED', 'FAILED', 'STANDARD_OUT', 'STANDARD_ERROR'
        exceptionFormat = 'full'
    }
    jvmArgs '--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED'
}

jar {
    manifest {
        attributes(
                'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' ')
        )
    }
}

